k8s/manifests/dev/ingress/backend-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pc-rig-and-barter-backend-route
  namespace: rig-and-barter
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pc-rig-and-barter.com`) && (PathPrefix(`/api`) || PathPrefix(`/app`) || PathPrefix(`/socket`) || PathPrefix(`/msocket`))
      kind: Rule
      services:
        - name: api-gateway
          port: 9000
      middlewares:
        - name: default-headers
    - match: Host(`pc-rig-and-barter.com`) && (PathPrefix(`/realms`) || PathPrefix(`/resources`) || PathPrefix(`/auth`))
      kind: Rule
      services:
        - name: keycloak
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: rig-and-barter-staging-tls
